--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,9 @@
 platform = espressif32
 board = mhetesp32devkit
 framework = arduino
-lib_deps = links2004/WebSockets@^2.7.0
+board_build.filesystem = littlefs
+lib_deps = 
+	links2004/WebSockets@^2.7.0
+	lorol/LittleFS_esp32@^1.0.6
+
+extra_scripts = ./littlefsbuilder.py
